6.2: ?/?/2022
	* CORE: Added a Dao.createIfNotExists() for lazy entity creation.  Thanks much to BlackBaroness.

6.1: 12/20/2021
	* ALL: Bumped the optional dependency to log4j2 to version 2.17.0.  No direct references to log4j2 code in ormlite.

6.0: 12/18/2021
	* ALL: Added support for Java 7.  Dropped support for Java 6.
	* ALL: Migrated to supporting AutoCloseable.  Most close() methods now throw Exception not IOException.
	* CORE: Removed some @Deprecated methods that had been with us for a while.
	* CORE: Added closeable-spliterator for better handing of JDK8+ streams.  Thanks to zhemaituk.
	* CORE: Add Dao.queryForFirst() convenience method.
	* JDBC: ormlite-jdbc jar now includes the -core classes.  No need to import ormlite-core jar anymore.
	* JDBC: Fixed exceptions in some JDBC drivers when working with chars.  Thanks to Bo98.
	* JDBC: Fixed support for creating index IF NOT EXISTS in MariaDb.  Thanks to BluemediaGER. 
	* JDBC: Fixed boolean char type handling in Derby.
	* ANDROID: ormlite-android jar now includes the -core classes.  No need to import ormlite-core jar anymore.

------------------------------------------------------------------------------------------------------------------------

5.7: 11/7/2021
	* CORE: Fixed possible thread issue around field-name lookups.  Thanks to dlew.
	* CORE: Fixed a number of flaky tests based on field order. Thanks CharlesZKQ, NanaOkada, hwang-pku, and chimo173.
	* CORE: Upgraded SimpleLogging code to fix annoying startup messages.  Thanks to JayDi85.
	* CORE: Removed broken getCreateTableStatements(DatabaseType, ...). ConnectionSource needed. Thanks to blacatena.
	* CORE: Added WrappedConnectionSource and other support classes for tracing unclosed connections and statements.
	* CORE: Added better support for JDK8+ streams with lazy foreign collections.  Thanks to zhemaituk.
	* ANDROID: Fixed bug in number rows affected with executeUpdateDelete() in newer API versions.  Thanks to WonShaw.

5.6: 6/22/2021